# Homework-C-C-

./: README.md  main.c
.github/workflows/: ci.yml
fib_lib/: fib.c  fib.h
tests/: CMakeLists.txt  test_fib.cpp
v1/: CMakeLists.txt  main.c
v1/tests/: CMakeLists.txt  test_lib.cpp
v1/vec_lib/: CMakeLists.txt  lib1.c
v2/: CMakeLists.txt  main.c
v2/tests_lib2/: CMakeLists.txt  test_lib2.cpp
v2/vec_lib2/: CMakeLists.txt  lib2.c  lib2.h
